--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-	<script src="dist/build.js"></script>
+
 </body>
 </html>
